--- a/.github/workflows/trivy-secret-scan.yml
+++ b/.github/workflows/trivy-secret-scan.yml
@@ -1,4 +1,4 @@
-name: Trivy Secret Scan
+name: Trivy Secret Scan on PR
 
 on:
   pull_request:
@@ -6,23 +6,31 @@ on:
 
 jobs:
   secret-scan:
-    name: Run Trivy Secret Scanner
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout PR branch
+      - name: Checkout target (main) branch
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: main
           fetch-depth: 0
+
+      - name: Fetch PR branch
+        run: |
+          git fetch origin ${{ github.event.pull_request.head.ref }}:pr-branch
+
+      - name: Get list of changed files
+        id: diff
+        run: |
+          git diff --name-only main pr-branch > changed_files.txt
+          cat changed_files.txt
 
       - name: Install Trivy
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: fs
           scanners: secret
-          ignore-unfixed: true
-          severity: CRITICAL,HIGH
           exit-code: '1'
           hide-progress: true
+          severity: CRITICAL,HIGH
           format: table
-          path: "."
+          path: $(cat changed_files.txt | tr '\n' ' ')
