--- a/.github/workflows/pr-scan.yml
+++ b/.github/workflows/pr-scan.yml
@@ -1,38 +1,46 @@
-name: PR Security Scan
-
+name: Security and Code Quality Scan
 on:
   pull_request:
     branches:
       - main
-
+      - dev*
 jobs:
-  security-scan:
+  scan-and-test:
     runs-on: ubuntu-latest
     steps:
-      # --- Checkout ---
-      - name: Checkout PR branch
+      - name: Checkout code
         uses: actions/checkout@v4
+      # Install Trivy
+      - name: Install Trivy
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update -y
+          sudo apt-get install -y trivy
+      # Run Trivy Scan (secrets + vulnerabilities)
+      - name: Run Trivy Scan
+        run: |
+          echo " Running Trivy scan..."
+          trivy fs --scanners vuln,secret --exit-code 1 --no-progress .
+      # Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          fetch-depth: 0
-
-      # --- Trivy Secret Scan ---
-      - name: Run Trivy secret scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: fs
-          scanners: secret
-          exit-code: '1'          # fail if secrets found
-          hide-progress: true
-          severity: CRITICAL,HIGH
-          format: table
-          path: "."
-
-      # --- TruffleHog Git Diff Scan ---
-      - name: Run TruffleHog on PR commits
-        uses: trufflesecurity/trufflehog@main
-        with:
-          path: "."
-          base: "main"   # target branch
-          head: ${{ github.event.pull_request.head.ref }}
-          extra_args: --results=verified,unknown --fail
+          python-version: '3.10'
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+      # Run Python Linter (will fail on errors)
+      - name: Run flake8 (Linting)
+        run: |
+          echo " Running lint checks..."
+          flake8 .
+      # Run Python Tests (allow no tests, but fail on real errors)
+      - name: Run pytest
+        run: |
+          echo " Running tests..."
+          pytest --maxfail=1 --disable-warnings -q || [ $? -eq 5 ]
