--- a/.github/workflows/pr-scan.yml
+++ b/.github/workflows/pr-scan.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run flake8 (Linting)
         run: |
           echo " Running lint checks..."
-          flake8 .
+          flake8 . --select=E
       # Run Python Tests (allow no tests, but fail on real errors)
       - name: Run pytest
         run: |
